--- a/game_frontend/package.json
+++ b/game_frontend/package.json
@@ -22,7 +22,8 @@
     "jest": "^22.4.0",
     "jest-styled-components": "^5.0.1",
     "react-test-renderer": "^16.2.0",
-    "redux-mock-store": "^1.5.1"
+    "redux-mock-store": "^1.5.1",
+    "standard": "^11.0.1"
   },
   "dependencies": {
     "@material-ui/core": "^1.2.0",
@@ -30,16 +31,16 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "^6.23.0",
-    "parcel-bundler": "^1.9.2",
+    "parcel-bundler": "^1.9.7",
     "react": "^16.2.0",
     "react-ace": "^6.1.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-unity-webgl": "^6.5.0",
-    "redux": "^3.7.2",
-    "redux-observable": "^0.18.0",
-    "redux-devtools-extension": "^2.13.2",
-    "rxjs": "^5.5.10",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-observable": "^1.0.0",
+    "rxjs": "^6.2.2",
     "shelljs": "^0.8.1",
     "styled-components": "^3.2.5",
     "webfontloader": "^1.6.28"
